--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -854,7 +854,7 @@ dl {
   bottom: 0;
   width: 100%;
   box-shadow: -6px -8px 15px #cccccc40;
-  opacity: 1;
+  opacity: 0;
   background-color: var(--white-color);
 }
 
@@ -879,6 +879,17 @@ dl {
 
 .box a img {
   width: 28px;
+}
+
+/*==========Fix Call=========*/
+.tpt {
+  position: fixed;
+  bottom: 2%;
+  z-index: 999999999;
+  left: 0.4%;
+}
+.call {
+  margin: 0 0 10px 0;
 }
 
 /* Galllery */
@@ -1142,6 +1153,12 @@ dl {
   }
   .footer-section .single-footer .single-footer-head {
     margin-bottom: 10px;
+  }
+  .mobile-footer {
+    opacity: 1;
+  }
+  .tpt {
+    display: none;
   }
 }
 
