--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -186,6 +186,7 @@ dl {
 .mob-header {
   padding: 0px 0;
   background: #f0f0f0;
+  box-shadow: 1px 1px 20px #f4efef;
 }
 .mob-main-header-right i {
   font-size: 25px;
@@ -848,7 +849,7 @@ dl {
 
 /*--Mobile footer--*/
 .mobile-footer {
-  padding: 10px;
+  padding: 2px 0;
   position: fixed;
   z-index: 9999;
   bottom: 0;
@@ -856,6 +857,7 @@ dl {
   box-shadow: -6px -8px 15px #cccccc40;
   opacity: 0;
   background-color: var(--white-color);
+  border-radius: 15px 15px 0 0;
 }
 
 .box {
@@ -863,18 +865,22 @@ dl {
   align-items: center;
   justify-content: center;
   text-align: center;
+  border-right: 1px dashed #f44336;
+}
+.box:last-child {
+  border-right: unset;
 }
 
 .box a p {
-  font-size: 11px;
-  font-weight: 500;
-  color: var(--primary-color);
+  font-size: 12px;
+  font-weight: 600;
+  color: var(--secondary-color);
   margin-bottom: 0px;
 }
 .box a i {
   font-size: 20px;
   font-weight: 500;
-  color: var(--primary-color);
+  color: var(--secondary-color);
 }
 
 .box a img {
@@ -884,12 +890,92 @@ dl {
 /*==========Fix Call=========*/
 .tpt {
   position: fixed;
-  bottom: 2%;
+  bottom: 3%;
   z-index: 999999999;
-  left: 0.4%;
+  left: 2%;
 }
 .call {
-  margin: 0 0 10px 0;
+  margin: 0 0 30px 0;
+}
+.call a {
+  background-color: var(--secondary-color);
+  color: var(--white-color);
+  display: inline-block;
+  font-size: 20px;
+  height: 50px;
+  width: 50px;
+  line-height: 44px;
+  border-radius: 50%;
+  text-align: center;
+  position: relative;
+}
+.call a::before {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  right: 0;
+  bottom: 0;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  border: 1px solid var(--secondary-color);
+  content: "";
+  transform: translate(-50%, -50%);
+}
+.whatsapp a {
+  background-color: var(--secondary-color);
+  color: var(--white-color);
+  display: inline-block;
+  font-size: 30px;
+  height: 50px;
+  width: 50px;
+  line-height: 44px;
+  border-radius: 50%;
+  text-align: center;
+  position: relative;
+}
+.whatsapp a::before {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  right: 0;
+  bottom: 0;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  border: 1px solid var(--secondary-color);
+  content: "";
+  transform: translate(-50%, -50%);
+}
+.ripple::before {
+  -webkit-animation-delay: 0.9s;
+  animation-delay: 0.9s;
+  content: "";
+  position: absolute;
+  right: 0;
+  bottom: 0;
+}
+.ripple::after {
+  -webkit-animation-delay: 0.6s;
+  animation-delay: 0.6s;
+  content: "";
+  position: absolute;
+  right: 0;
+  bottom: 0;
+}
+.ripple::before,
+.ripple::after {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  width: 60px;
+  height: 60px;
+  -webkit-transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%);
+  border-radius: 50%;
+  box-shadow: 0 0 0 0 rgba(243, 159, 95, 0.5);
+  -webkit-animation: rippleOne 3s infinite;
+  animation: rippleOne 3s infinite;
 }
 
 /* Galllery */
@@ -1011,17 +1097,19 @@ dl {
   .hero h1 {
     font-size: 52px;
     text-align: center;
-    margin-top: 24px;
+    margin-top: 10px;
   }
   .hero p {
     font-size: 14px;
     text-align: center;
+    margin-bottom: 6px;
   }
   .hero .parasuit-shape {
     position: absolute;
     top: 7%;
-    left: 1%;
+    left: 3%;
     z-index: -1;
+    opacity: 0.8;
   }
   .main-heading h1 {
     font-size: 38px;
@@ -1058,9 +1146,9 @@ dl {
   }
   .hero-shape-traingle {
     position: absolute;
-    left: -25%;
-    bottom: -26%;
-    transform: scale(0.3);
+    left: -26%;
+    bottom: -23%;
+    transform: scale(0.4);
     z-index: -1;
   }
   .hero .bottom-shape {
@@ -1068,17 +1156,20 @@ dl {
   }
   .hero .hero-shape-playarea {
     position: absolute;
-    bottom: 0%;
-    left: 55%;
-    z-index: 99;
+    bottom: 62%;
+    left: 27%;
+    z-index: -1;
+    opacity: 0.2;
   }
   .theme-btn {
     font-size: 14px;
     left: 50%;
     transform: translate(-50%);
+    font-weight: 600;
+    padding: 10px 15px;
   }
   .hero-img {
-    margin: 38px 0;
+    margin: 15px 0;
   }
   .bg-section-padding {
     padding: 80px 0;
