--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -855,7 +855,7 @@ dl {
   bottom: 0;
   width: 100%;
   box-shadow: -6px -8px 15px #cccccc40;
-  opacity: 0;
+  opacity: 0 !important;
   background-color: var(--white-color);
   border-radius: 15px 15px 0 0;
 }
@@ -1246,7 +1246,7 @@ dl {
     margin-bottom: 10px;
   }
   .mobile-footer {
-    opacity: 1;
+    opacity: 1 !important;
   }
   .tpt {
     display: none;
