--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -63,7 +63,9 @@ ol,
 dl {
   margin: 0;
   padding: 0;
+  list-style: none;
 }
+
 .page-wrapper {
   overflow: hidden;
 }
@@ -72,6 +74,24 @@ dl {
 }
 .bg-section-padding {
   padding: 150px 0;
+}
+/*========shimmer UI==========*/
+.shimmer {
+  width: 100%;
+  height: 350px;
+  background: linear-gradient(90deg, #f0f0f0 25%, #e0e0e0 50%, #f0f0f0 75%);
+  background-size: 200% 100%;
+  animation: shimmer 1.5s infinite;
+  border-radius: 8px; /* Optional: Make the corners rounded */
+}
+
+@keyframes shimmer {
+  0% {
+    background-position: 200% 0;
+  }
+  100% {
+    background-position: -200% 0;
+  }
 }
 /*========Btn==========*/
 .theme-btn {
@@ -446,7 +466,7 @@ dl {
 .home-activities .bottom-shape {
   position: absolute;
   right: 0;
-  top: 99.9%;
+  top: 99.8%;
   z-index: 9;
 }
 
@@ -1562,4 +1582,107 @@ dl {
   100% {
     transform: translateX(-50%);
   }
+}
+/*--------------------------------------------------------------
+# Quotaion Form
+--------------------------------------------------------------*/
+/*--------------------------------------------------------------
+# breadcrumb
+--------------------------------------------------------------*/
+.breadcrumb-wrapper {
+  position: relative;
+  overflow: hidden;
+  background: url(http://localhost:3000/assets/images/breadcrumb.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  background-position: center;
+}
+.bg-cover {
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  background-position: center;
+}
+.breadcrumb-wrapper .page-heading {
+  position: relative;
+  padding: 100px 0;
+  text-align: center;
+  z-index: 9;
+}
+
+.breadcrumb-wrapper .page-heading h1 {
+  color: var(--white-color);
+  font-size: 60px;
+  position: relative;
+  font-family: var(--primary-font);
+  z-index: 9;
+}
+.breadcrumb-wrapper .page-heading .breadcrumb-items {
+  display: flex;
+  align-items: center;
+  margin-top: 20px;
+  gap: 10px;
+  justify-content: center;
+}
+.breadcrumb-wrapper .page-heading .breadcrumb-items li {
+  color: var(--white-color);
+  text-transform: capitalize;
+  font-weight: 600;
+  font-size: 18px;
+}
+
+.breadcrumb-wrapper .page-heading .breadcrumb-items li a {
+  color: var(--white-color);
+  transition: all 0.4s ease-in-out;
+}
+.breadcrumb-wrapper .page-heading .breadcrumb-items li i {
+  color: var(--white);
+}
+.breadcrumb-wrapper .line-shape {
+  position: absolute;
+  left: 0;
+  bottom: 20%;
+}
+.breadcrumb-wrapper .plane-shape {
+  position: absolute;
+  top: 25%;
+  left: 15%;
+}
+.breadcrumb-wrapper .doll-shape {
+  position: absolute;
+  bottom: 25%;
+  left: 12%;
+}
+.breadcrumb-wrapper .parasuit-shape {
+  position: absolute;
+  right: 10%;
+  top: 10%;
+}
+.breadcrumb-wrapper .frame-shape {
+  position: absolute;
+  top: 12%;
+  right: 23%;
+  animation: rounded 5s linear infinite;
+}
+.breadcrumb-wrapper .bee-shape {
+  position: absolute;
+  bottom: 25%;
+  right: 18%;
+}
+
+/*--------------------------------------------------------------
+# About US
+--------------------------------------------------------------*/
+.about .about-content h2 {
+  font-family: var(--secondary-font);
+  font-size: 55px;
+  color: var(--secondary-color);
+  font-weight: 700;
+  line-height: 1;
+}
+
+.about .about-content p {
+  color: var(--primary-color);
+  font-size: 20px;
 }
