fix error pages3

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1188,7 +1188,7 @@ dl {
     z-index: -1;
     opacity: 0.2;
   }
-  .theme-btn {
+  .hero .theme-btn {
     font-size: 14px;
     left: 50%;
     transform: translate(-50%);
@@ -1601,6 +1601,12 @@ dl {
   background-attachment: fixed;
   position: relative;
 }
+@media only screen and (max-width: 767px) and (-webkit-min-device-pixel-ratio: 2) {
+  /* Adjustments for iPhones and similar devices */
+  .quote-area.bg-item {
+    background-attachment: scroll; /* Remove fixed for iPhones */
+  }
+}
 /* .quote-area.bg-item::before {
   content: "";
   background-color: rgba(0, 0, 0, 0.575);
@@ -1614,7 +1620,7 @@ dl {
   max-width: 100%;
   margin-left: auto;
   position: relative;
-  z-index: 999999;
+  z-index: 99;
 }
 .quote-area .bottom-shape {
   position: absolute;
