--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -78,11 +78,19 @@ dl {
 /*========shimmer UI==========*/
 .shimmer {
   width: 100%;
-  height: 350px;
   background: linear-gradient(90deg, #f0f0f0 25%, #e0e0e0 50%, #f0f0f0 75%);
   background-size: 200% 100%;
   animation: shimmer 1.5s infinite;
   border-radius: 8px; /* Optional: Make the corners rounded */
+}
+.h-1 {
+  height: 100px;
+}
+.h-2 {
+  height: 200px;
+}
+.h-3 {
+  height: 325px;
 }
 
 @keyframes shimmer {
