--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -448,6 +448,15 @@ dl {
   color: var(--secondary-color);
   font-weight: 500;
 }
+.main ul li {
+  list-style-type: disclosure-closed;
+}
+.main ul li::marker {
+  color: var(--secondary-color);
+}
+.main a {
+  color: var(--secondary-color);
+}
 strong {
   color: var(--secondary-color);
   border-bottom: 1px dashed var(--secondary-color);
